--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://NPaugust.github.io/Midterm-Front-End-/",
+  "homepage": "https://NPaugust.github.io/Midterm-Front-End-",
   "name": "tic-tac-toe-midterm-project",
   "version": "0.1.0",
   "private": true,
@@ -17,8 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
