--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://npaugust.github.io/midterm-front-end/",
+  "homepage": "https://NPaugust.github.io/midterm-front-end/",
   "name": "tic-tac-toe-midterm-project",
   "version": "0.1.0",
   "private": true,
