--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "server": "webpack-dashboard -- webpack-dev-server --inline --port 8080",
+    "webdriver-update": "webdriver-manager update",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "heroku-postbuild": "npm run build"
   },
   "engines": {
-    "npm": "5.6.0",
-    "node": "8.10.0"
+    "npm": "10.1.0",
+    "node": "20.9.0"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +46,13 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
-  }
+    "@types/core-js": "^0.9.0",
+    "gh-pages": "^6.0.0",
+    "nodemon": "^3.0.1"
+  },
+  "description": "Tic Tac Toe\r [Deployment](https://npaugust.github.io/Midterm-Front-End-/)",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
